--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
 				</li>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<li id="download" ><a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&tn=site888_3_pg&wd=%E5%95%A6%E5%95%A6%E5%95%A6&oq=%25E5%2593%2588%25E5%2593%2588%25E5%2593%2588&rsv_pq=b91452fc0002c4f8&rsv_t=e736TWDxlN0%2F91aIkoJnEo9HE628e9sH9H0OoB2cjXR8qTcTCcrurwE1%2BvkKzuUzYfQg&rqlang=cn&rsv_enter=1&rsv_sug3=15&rsv_sug1=9&rsv_sug7=100&bs=%E5%93%88%E5%93%88%E5%93%88" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s" target="_blank" ><span class="network-name" >进入实验</span></a>
+        </li>
+        <br />
+        <li>
+          <br />
+          <img src="img/qr1.png" alt="QR code" width="150" height="150">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="img/qr1.png" alt="QR code" width="150" height="150">
 				</li>
-        <br />
-        <br />
-        <img src="img/qr1.png" alt="QR code" width="150" height="150">
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="img/qr1.png" alt="QR code" width="150" height="150">
 			</ul>
 		</div>
         <!-- /.container -->
@@ -72,7 +74,7 @@
 
 
 	<!-- NavBar-->
-	<nav class="navbar-default" role="navigation" style="position: relative; top: 500px;">
+	<nav class="navbar-default" role="navigation" >
     <div class="container">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
