--- a/index.html
+++ b/index.html
@@ -423,9 +423,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Download Free</h2>
-				<p class="lead" style="margin-top:0">Pay with a Tweet</p>
-				<p><a class="btn btn-embossed btn-primary view" role="button">Free Download</a></p>
+				<h3>实验介绍结束了
+          <br>
+          请点击左上角进入问卷和实验</h3>
+				<p class="lead" style="margin-top:0"><br>问卷和实验都要做哟(☆▽☆)</p>
 			 </div>
 			</div>
 		</div>
