--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </a>
             <a href="img/slide/表情2.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/表情2f.jpg" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/表情2f.JPG" alt="">
               </div>
             </a>
             <a href="img/slide/表情3.jpg" class="image-link">
