--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                      <div id="owl-demo-1" class="owl-carousel">
             <a href="img/slide/表情1.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/表情1f.jpg" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/表情1f.png" alt="">
               </div>
             </a>
             <a href="img/slide/表情2.jpg" class="image-link">
