--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Flatfy Free Flat and Responsive HTML5 Template ">
     <meta name="author" content="">
 
-    <title>Flatfy – Free Flat and Responsive HTML5 Template</title>
+    <title>一个有趣的研究——面部表情及其发展特点的研究</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +47,7 @@
 	<!-- FullScreen -->
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">面部表情</h1>
+			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">面部表情及其发展特点的研究</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">本实验采用表情图片与词语匹配的方式和认知心理学的启动实验范式</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_1Opxjxh6Z7OAfFr" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="0.8s" target="_blank" ><span class="network-name" >进入问卷</span></a>
@@ -461,7 +461,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h3 class="footer-title">Copyright © 2017</h3>
+            <h3 class="footer-title">面部表情及其发展特点的研究  Copyright  ©  2017 </h3>
           </div> <!-- /col-xs-7 -->
         </div>
       </div>
