--- a/index.html
+++ b/index.html
@@ -311,20 +311,19 @@
               <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
                   <h3 class="section-heading">刺激材料和仪器</h3>
                   <p class="lead">
-                    悲伤图片10张，愉快图片10张；正向词6个，负向词6个，中性词3个。刺激来源于JAFFE人脸表情数据库（该表情库中每幅图像都有原始的表情定义，分为七种表情：中性脸、高兴、悲伤、惊奇、愤怒、厌恶、恐惧）。表情图片的分辨率为256像素x256像素。
+                    高兴、悲伤、惊奇、愤怒、厌恶、恐惧面孔图片各7张，共42张。刺激来源于JAFFE人脸表情数据库（该表情库中每幅图像都有原始的表情定义，分为七种表情：中性脸、高兴、悲伤、惊奇、愤怒、厌恶、恐惧）。表情图片的分辨率为256像素x256像素。
                     <br/>
                    </br/>
-                   被试双眼与屏幕距离约为150cm，被试坐在离显示器60cm的位置，视角小于3°。
-
+                   被试双眼与屏幕距离约为60cm，视角小于3°。
                  </p>
                </div>
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
                     <h3 class="section-heading">程序和任务</h3>
                     <p class="lead">
-                      本实验采用情绪启动范式，研究先呈现注视点500ms，面部表情图片作为启动刺激，呈现时间为500ms。间隔时间100ms或800ms（间隔时间内呈现注视点“+”），随后要求被试对面部表情与情绪词（靶刺激）进行匹配，与靶刺激共同呈现的是一个干扰刺激（一个与启动刺激不匹配的情绪词）。从而形成评价一致和不一致两种结果，控制SOA分别为600ms或1300ms（SOA 指从启动刺激开始呈现到靶刺激激开始呈现的时间间隔）。研究表明, 当启动刺激与靶刺激效价一致时所需反应时比效价不一致时更短，所以要求被试在尽可能快的时间里进行词语的匹配。
+                      本实验采用情绪启动范式，研究先呈现注视点500ms，面部表情图片作为启动刺激，呈现时间为500ms。间隔时间为600ms到900ms之间（间隔时间内呈现注视点“+”），随后要求被试对面部表情与情绪词（靶刺激）进行匹配，与靶刺激共同呈现的是一个干扰刺激（一个与启动刺激不匹配的情绪词）。从而形成评价一致和不一致两种结果，控制SOA分别为600ms或1300ms（SOA 指从启动刺激开始呈现到靶刺激激开始呈现的时间间隔）。研究表明, 当启动刺激与靶刺激效价一致时所需反应时比效价不一致时更短，所以要求被试在尽可能快的时间里进行词语的匹配。
                       <br/>
                      </br/>
-                          依据JAFFE人脸表情数据库，本实验共有六种面孔图片与情绪词语的匹配方式：高兴、悲伤、惊奇、愤怒、厌恶、恐惧，练习阶段每种情绪呈现1次，共6个试次。正式实验阶段每种情绪呈现6次，一共36个试次。其中，SOA为600ms与1300ms的情况各一半。
+                      依据JAFFE人脸表情数据库，本实验共有六种面孔图片与情绪词语的匹配方式：高兴、悲伤、惊奇、愤怒、厌恶、恐惧，练习阶段每种情绪呈现1次，共6个试次。正式实验阶段每种情绪呈现6次，一共36个试次。
                     </p>
               </div>
 
@@ -333,29 +332,6 @@
     </div>
 
 
-	<!-- Screenshot -->
-	<div  class="content-section-c ">
-		<div class="container">
-			<div class="row">
-			<div class="col-md-6 col-md-offset-3 text-center wrap_title white">
-				<p class="lead" style="margin-top:0">  </p>
-			 </div>
-			<div class="mockup-content">
-					<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-						<div class="morph-content">
-							<div>
-								<div>
-									<form>
-										<p><button></button></p>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Credits -->
 	<div id="结果与讨论" class="content-section-a">
@@ -433,35 +409,32 @@
 	</div>
 
   <div  class="content-section-c ">
-    <div class="container">
-      <div class="row">
-       <div class="col-md-6 col-md-offset-3 text-center wrap_title white" >
-        <h3>参考文献</h3>
-        <p align="left">
-          <br>方平, 陈满琪, & 姜媛. (2006). 情绪启动研究的实验范式. <i/> 心理科学 , 29</i/>(6), 1396-1399.
-          <br>吕勇, 张伟娜, & 沈德立. (2010). 不同愉悦度面孔阈下情绪启动效应:来自ERP的证据. <i/>心理学报, 42</i/>(9), 929-938.
-          <br>刘晶莹. (2012). <i/>情绪冲突条件下的面部表情识别研究</i/>. (Doctoral dissertation, 西南大学).
-          <br>乔建中. (1998). 表情判别能力的发展特点与影响因素. <i/>心理科学,</i/> 52-56.
-          <br>邱方晖, 罗跃嘉, & 贾世伟. (2015). 面部表情的类别知觉及其个体差异. <i/>心理科学进展, 23</i/>(6), 946-958.
-          <br>蚁金瑶, 钟明天, 罗英姿, 凌宇, & 姚树桥. (2007). 情绪图片的阈下启动效应.<i/> 中国临床心理学杂志, 15</i/>(3), 304-307.
-          <br>De Houwer, J., & Eelen, P. (1998). An affective variant of the simon paradigm. <i/>Cognition and Emotion, 12</i/>(1), 45-61.http://dx.doi.org/10.1080/026999398379772<a href="http://dx.doi.org/10.1080/026999398379772" " target="_blank" title="An affective variant of the simon paradigm." > http://dx.doi.org/10.1080/026999398379772 </a>
-          <br>Fine, J. G., Semrud-Clikeman, M., & Zhu, D. C. (2009). Gender differences in bold activation to face photographs and video vignettes. <i/>Behavioural Brain Research, 201</i/>(1), 137-146.http://dx.doi.org/10.1016/j.bbr.2009.02.009<a href="http://dx.doi.org/10.1016/j.bbr.2009.02.009" " target="_blank" title="Gender differences in bold activation to face photographs and video vignettes" > http://dx.doi.org/10.1016/j.bbr.2009.02.009 </a>
-          <br>Huang, J., Chan, R. C., Gollan, J. K., Liu, W., Ma, Z., & Li, Z., et al. (2011). Perceptual bias of patients with schizophrenia in morphed facial expression. <i/>Psychiatry Research, 185</i/>(1-2), 60.http://dx.doi.org/10.1016/j.psychres.2010.05.017<a href="http://dx.doi.org/10.1016/j.psychres.2010.05.017" " target="_blank" title="Perceptual bias of patients with schizophrenia in morphed facial expression" > http://dx.doi.org/10.1016/j.psychres.2010.05.017 </a>
-          <br>Klinger, M. R., Burton, P. C., & Pitts, G. S. (2000). Mechanisms of unconscious priming: I. response competition, not spreading activation. <i/>Journal of Experimental Psychology: Learning, Memory, and Cognition, 26</i/>(2), 441-455.http://dx.doi.org/10.1037/0278-7393.26.2.441 <a href="http://dx.doi.org/10.1037/0278-7393.26.2.441" " target="_blank" title="Mechanisms of unconscious priming: I. response competition, not spreading activation" > http://dx.doi.org/10.1037/0278-7393.26.2.441 </a>
-        </p>
-       </div>
+      <div class="container">
+        <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center wrap_title white">
+          <h3>参考文献</h3>
+          <p  align = "left"  style="margin-top:0">
+            <br>方平, 陈满琪, & 姜媛. (2006). 情绪启动研究的实验范式. <i/> 心理科学 , 29</i/>(6), 1396-1399.
+            <br>吕勇, 张伟娜, & 沈德立. (2010). 不同愉悦度面孔阈下情绪启动效应:来自ERP的证据. <i/>心理学报, 42</i/>(9), 929-938.
+            <br>刘晶莹. (2012). <i/>情绪冲突条件下的面部表情识别研究</i/>. (Doctoral dissertation, 西南大学).
+            <br>乔建中. (1998). 表情判别能力的发展特点与影响因素. <i/>心理科学,</i/> 52-56.
+            <br>邱方晖, 罗跃嘉, & 贾世伟. (2015). 面部表情的类别知觉及其个体差异. <i/>心理科学进展, 23</i/>(6), 946-958.
+            <br>蚁金瑶, 钟明天, 罗英姿, 凌宇, & 姚树桥. (2007). 情绪图片的阈下启动效应.<i/> 中国临床心理学杂志, 15</i/>(3), 304-307.
+            <br>De Houwer, J., & Eelen, P. (1998). An affective variant of the simon paradigm. <i/>Cognition and Emotion, 12</i/>(1), 45-61.http://dx.doi.org/10.1080/026999398379772
+            <br>Fine, J. G., Semrud-Clikeman, M., & Zhu, D. C. (2009). Gender differences in bold activation to face photographs and video vignettes. <i/>Behavioural Brain Research, 201</i/>(1), 137-146.http://dx.doi.org/10.1016/j.bbr.2009.02.009
+            <br>Huang, J., Chan, R. C., Gollan, J. K., Liu, W., Ma, Z., & Li, Z., et al. (2011). Perceptual bias of patients with schizophrenia in morphed facial expression. <i/>Psychiatry Research, 185</i/>(1-2), 60.http://dx.doi.org/10.1016/j.psychres.2010.05.017
+            <br>Klinger, M. R., Burton, P. C., & Pitts, G. S. (2000). Mechanisms of unconscious priming: I. response competition, not spreading activation. <i/>Journal of Experimental Psychology: Learning, Memory, and Cognition, 26</i/>(2), 441-455.http://dx.doi.org/10.1037/0278-7393.26.2.441
+          </p>
+        </div>
+        </div>
       </div>
     </div>
-  </div>
-
-	<!-- Contact -->
-
 
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h3 class="footer-title">面部表情及其发展特点的研究  Copyright  ©  2017 </h3>
+            <h6 class="footer-title">面部表情及其发展特点的研究  Copyright  ©  2018 </h6>
           </div> <!-- /col-xs-7 -->
         </div>
       </div>
