--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
 			<div class="row">
 
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img class="rotate" src="img/icon/1197701.png" alt="Generic placeholder image">
+				  <img class="rotate" src="img/icon/22222.png" height="100" width="100" alt="Generic placeholder image">
 				  <h3>面部表情</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/1197678.png" alt="Generic placeholder image">
+				  <img  class="rotate" src="img/icon/1197678.png" height="100" width="100" alt="Generic placeholder image">
 				   <h3>情绪启动效应</h3>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/1197676.png" alt="Generic placeholder image">
+				  <img  class="rotate" src="img/icon/11111.png"  height="100" width="100" alt="Generic placeholder image">
 				   <h3>性别</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
@@ -141,19 +141,19 @@
 			<div class="row tworow">
 
 				<div class="col-sm-4  wow fadeInDown text-center">
-				  <img class="rotate" src="img/icon/1197682.png" alt="Generic placeholder image">
+				  <img class="rotate" src="img/icon/1197682.png"  height="100" width="100" alt="Generic placeholder image">
 				  <h3>情商</h3>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/1197688.png" alt="Generic placeholder image">
+				  <img  class="rotate" src="img/icon/1197701.png"  height="100" width="100" alt="Generic placeholder image">
 				   <h3>情绪识别</h3>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
         <div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/1197684.png" alt="Generic placeholder image">
+				  <img  class="rotate" src="img/icon/1197684.png"  height="100" width="100" alt="Generic placeholder image">
 				   <h3>描述性情绪词语</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
@@ -288,7 +288,7 @@
             <div class="row">
 
                 <div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="img/表情.jpg" alt="">
+                    <img class="img-responsive " src="img/表情3.jpg" alt="">
                 </div>
 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
@@ -350,7 +350,7 @@
 						</div>
 						<div class="col-md-8 box-ct">
 							<h3> 一 </h3>
-							<p> 整理实验数据，并导入统计软件中准备进行下一步处理 </p>
+							<p> 整理实验数据，并导入统计软件中进行数据分析 </p>
 						</div>
 				  </div>
 			  </div>
@@ -361,7 +361,7 @@
 					  </div>
 					  <div class="col-md-8 box-ct">
 						<h3> 二 </h3>
-						<p> 比较两组(平衡空间误差)中“好”和“白人”配对时的平均反应时与“好”和“黑人”配对时的平均反应时的差异以及两组间相同任务的差异，看看有什么结果？</p>
+						<p> 比较男性被试和女性被试配对反应时和正确率的差异以及情商对被试表现的影响</p>
 					  </div>
 					</div>
 			  </div>
@@ -375,7 +375,7 @@
 						</div>
 						<div class="col-md-8 box-ct">
 							<h3> 三 </h3>
-							<p> 预期情商和匹配成绩呈正相关</p>
+							<p> 预期情商和匹配成绩呈正相关，情商越高，平均反应时越小，匹配正确率越高</p>
 						</div>
 				  </div>
 			  </div>
@@ -386,7 +386,7 @@
 					  </div>
 					  <div class="col-md-8 box-ct">
 						<h3> 四 </h3>
-						<p>男性被试与女性被试匹配成绩无显著差异</p>
+						<p>预期男性被试与女性被试匹配反应时与正确率无显著差异，并且交互作用不显著</p>
 					  </div>
 					</div>
 			  </div>
@@ -400,7 +400,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h3>实验介绍结束了
-          <br>
+          <br><br>
           请点击左上角进入问卷和实验</h3>
 				<p class="lead" style="margin-top:0"><br>问卷和实验都要做哟(☆▽☆)</p>
 			 </div>
@@ -413,7 +413,7 @@
         <div class="row">
         <div class="col-md-6 col-md-offset-3 text-center wrap_title white">
           <h3>参考文献</h3>
-          <p  align = "left"  style="margin-top:0">
+          <p  align ="left"  style="margin-top:0">
             <br>方平, 陈满琪, & 姜媛. (2006). 情绪启动研究的实验范式. <i/> 心理科学 , 29</i/>(6), 1396-1399.
             <br>吕勇, 张伟娜, & 沈德立. (2010). 不同愉悦度面孔阈下情绪启动效应:来自ERP的证据. <i/>心理学报, 42</i/>(9), 929-938.
             <br>刘晶莹. (2012). <i/>情绪冲突条件下的面部表情识别研究</i/>. (Doctoral dissertation, 西南大学).
@@ -426,6 +426,18 @@
             <br>Klinger, M. R., Burton, P. C., & Pitts, G. S. (2000). Mechanisms of unconscious priming: I. response competition, not spreading activation. <i/>Journal of Experimental Psychology: Learning, Memory, and Cognition, 26</i/>(2), 441-455.http://dx.doi.org/10.1037/0278-7393.26.2.441
           </p>
         </div>
+          <div >
+            <div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
+              <button href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_1Opxjxh6Z7OAfFr" type="button "><span>Subscribe to our Newsletter</span></button>
+              <div class="morph-content">
+                <div>
+                  <div class="content-style-form content-style-form-4 ">
+                    <h2 class="morph-clone">  不要再拉 到底了(￣▽￣)  &nbsp; 被试爸爸做一下我们的实验吧 v   </h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
