--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <!-- Custom Google Web Font -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+	  <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS-->
     <link href="css/general.css" rel="stylesheet">
 
 	 <!-- Owl-Carousel -->
     <link href="css/custom.css" rel="stylesheet">
-	<link href="css/owl.carousel.css" rel="stylesheet">
+	  <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/animate.css" rel="stylesheet">
+	  <link href="css/style.css" rel="stylesheet">
+	  <link href="css/animate.css" rel="stylesheet">
 
 	<!-- Magnific Popup core CSS file -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	  <link rel="stylesheet" href="css/magnific-popup.css">
 
-	<script src="js/modernizr-2.6.2.min.js"></script>  <!-- Modernizr /-->
+	  <script src="js/modernizr-2.6.2.min.js"></script>  <!-- Modernizr /-->
 </head>
 
 <body id="home">
@@ -58,9 +58,9 @@
         <br />
         <li>
           <br />
-          <img src="img/qr1.png" alt="QR code" width="150" height="150">
+          <img src="img/问卷二维码.png" alt="QR code" width="150" height="150">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <img src="img/qr1.png" alt="QR code" width="150" height="150">
+          <img src="img/实验二维码.png" alt="QR code" width="150" height="150">
 				</li>
 			</ul>
 		</div>
@@ -106,18 +106,16 @@
 		</div>
 	</nav>
 
-	<!-- What is -->
+	<!-- 关键词 -->
 	<div id="关键词" class="content-section-b" style="border-top: 0">
 		<div class="container">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>关键词</h2>
-				<p class="lead" style="margin-top:0">本研究的六个要素</p>
-
+				 <h2>关键词</h2>
+				 <p class="lead" style="margin-top:0">本研究的六个要素</p>
 			</div>
 
 			<div class="row">
-
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/22222.png" height="100" width="100" alt="Generic placeholder image">
 				  <h3>面部表情</h3>
@@ -126,16 +124,15 @@
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/1197678.png" height="100" width="100" alt="Generic placeholder image">
-				   <h3>情绪启动效应</h3>
+				  <h3>情绪启动效应</h3>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/11111.png"  height="100" width="100" alt="Generic placeholder image">
-				   <h3>性别</h3>
+				  <h3>性别</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
-
 			</div><!-- /.row -->
 
 			<div class="row tworow">
@@ -148,13 +145,13 @@
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/1197701.png"  height="100" width="100" alt="Generic placeholder image">
-				   <h3>情绪识别</h3>
+				  <h3>情绪识别</h3>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
         <div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/1197684.png"  height="100" width="100" alt="Generic placeholder image">
-				   <h3>描述性情绪词语</h3>
+				  <h3>描述性情绪词语</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
@@ -162,14 +159,11 @@
 		</div>
 	</div>
 
-	<!-- Use it -->
+	<!-- 实验背景知识 -->
     <div id ="实验背景知识" class="content-section-a">
-
         <div class="container">
-
             <div class="row">
-
-				<div class="col-sm-6 pull-right wow fadeInRightBig">
+				        <div class="col-sm-6 pull-right wow fadeInRightBig">
                     <img class="img-responsive " src="img/表情.jpg" alt="">
                 </div>
 
@@ -178,36 +172,34 @@
                     <br/>
                     <p class="lead">
 						面部表情是情绪外部表现的最主要的方面，它通过眼部肌肉、颜面肌肉和口部肌肉的变化来表现各种情绪状态。根据的研究在人类的日常交流中，通过语言传递的信息仅占信息总量的7%，而通过面部表情传递的信息却达到总信息量的55%。
-					</p>
-
+					          </p>
 				        </div>
             </div>
         </div>
-        <!-- /.container -->
-    </div>
+  </div>
 
     <div class="content-section-b">
 
-    <div class="container">
+      <div class="container">
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-            <a href="img/slide/表情1.jpg" class="image-link">
-              <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/表情1f.png" alt="">
-              </div>
-            </a>
-            <a href="img/slide/表情2.jpg" class="image-link">
-              <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/表情2f.JPG" alt="">
-              </div>
-            </a>
-            <a href="img/slide/表情3.jpg" class="image-link">
-              <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/表情3.jpg" alt="">
-              </div>
-            </a>
-          </div>
+                     <a href="img/slide/表情1.jpg" class="image-link">
+                     <div class="item">
+                       <img  class="img-responsive img-rounded" src="img/slide/表情1f.png" alt="">
+                     </div>
+                    </a>
+                    <a href="img/slide/表情2.jpg" class="image-link">
+                        <div class="item">
+                          <img  class="img-responsive img-rounded" src="img/slide/表情2f.JPG" alt="">
+                        </div>
+                    </a>
+                    <a href="img/slide/表情3.jpg" class="image-link">
+                      <div class="item">
+                        <img  class="img-responsive img-rounded" src="img/slide/表情3.jpg" alt="">
+                      </div>
+                    </a>
+                    </div>
                 </div>
 
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
@@ -216,54 +208,47 @@
                       在情绪研究中，面部表情一直是频繁研究的内容。乔建中等人的研究表明，面部表情判别能力在小学阶段已相当完善，然而表情强度的判别能力发展仅体现在对高强度表情的判别中，在中、低强度水平上，大、中、小学生均不能对表情本身所包含的强度以及表情之间的强度差异进行足够的分辨。邱方晖等人的研究发现攻击性个体更倾向于将模糊表情识别为愤怒表情；抑郁症患者存在面部表情识别障碍；社交焦虑者存在面部表情加工的缺陷。Jodene Goldenring Fine等人的脑科学研究表明，在面对积极的情感照片时，在男性前扣带回，内侧额回，额上回和颞上回等的激活比女性更强烈，而在面对消极的情感照片时没有出现这样的结果。本实验中我们将探究表情图片与词语匹配的性别差异和情商差异。
                    </p>
                </div>
-
            </div>
         </div>
     </div>
 
     <div class="content-section-a">
-
         <div class="container">
-
              <div class="row">
-
-        <div class="col-sm-6 pull-right wow fadeInRightBig">
+                <div class="col-sm-6 pull-right wow fadeInRightBig">
                     <img class="img-responsive " src="img/表情2.jpg" alt="">
                 </div>
 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
                     <h3 class="section-heading">什么是情绪启动效应？</h3>
                     <p class="lead"> 情绪启动(affective priming)是指对在评价上处于两极的目标刺激而言，个体对其做出评价的时间与准确性受到其前面的启动刺激性质的调节，当启动刺激和目标刺激的性质相一致时，个体对目标刺激的反应就会更快、更准确。而当启动刺激与目标刺激性质不一致时，个体对目标刺激的反应就较慢，错误率也较高。启动效应证实了人类拥有非条件性地、自动对传入刺激进行评价的能力。情绪启动效应(affective priming effect)指的是个体先行加工具有一定情绪意义的刺激后, 后继加工也易于蒙上相应的情绪色彩。
-          </p>
-
-        </div>
+                    </p>
+                  </div>
             </div>
         </div>
-
     </div>
 
     <div class="content-section-b">
-
-    <div class="container">
+      <div class="container">
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-2" class="owl-carousel">
-            <a href="img/slide/范式1.jpg" class="image-link">
-              <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/范式1f.jpg" alt="">
-              </div>
-            </a>
-            <a href="img/slide/范式2.jpg" class="image-link">
-              <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/范式2f.jpg" alt="">
-              </div>
-            </a>
-            <a href="img/slide/范式3.jpg" class="image-link">
-              <div class="item">
-                <img  class="img-responsive img-rounded" src="img/slide/范式3f.jpg" alt="">
-              </div>
-            </a>
-          </div>
+                       <a href="img/slide/范式1.jpg" class="image-link">
+                         <div class="item">
+                           <img  class="img-responsive img-rounded" src="img/slide/范式1f.jpg" alt="">
+                         </div>
+                       </a>
+                       <a href="img/slide/范式2.jpg" class="image-link">
+                         <div class="item">
+                           <img  class="img-responsive img-rounded" src="img/slide/范式2f.jpg" alt="">
+                         </div>
+                       </a>
+                       <a href="img/slide/范式3.jpg" class="image-link">
+                         <div class="item">
+                           <img  class="img-responsive img-rounded" src="img/slide/范式3f.jpg" alt="">
+                         </div>
+                       </a>
+                     </div>
                 </div>
 
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
@@ -273,40 +258,31 @@
                       <br/>
                      </br/>
 在经典的情绪启动实验中，作为启动刺激的情绪词与作为目标刺激的情绪词，或者具有相同的情绪价，如美好—鲜花；或者具有不同的情绪价，如美好—野兽。结果通常会发现情绪启动效应，即个体对一致条件下的目标词的反应要显著快于不一致条件。
-
-            </p>
-            </div>
-
-         </div>
+                    </p>
+                </div>
+              </div>
         </div>
     </div>
-
+<!-- /.实验目的与实验设计 -->
     <div id ="实验目的与实验设计" class="content-section-a">
-
         <div class="container">
-
             <div class="row">
-
                 <div class="col-sm-6 pull-right wow fadeInRightBig">
                     <img class="img-responsive " src="img/表情3.jpg" alt="">
                 </div>
-
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
                     <h3 class="section-heading">实验目的</h3>
                     <br/>
                     <p class="lead">
             利用情绪启动范式考察不同人对于各种表情图片和描述性情绪词语的匹配是否一致；不同性别之间对于各种表情图片和描述性情绪词语匹配是否存在性别差异，结合问卷考察情商高低对表情图片与情绪词的匹配是否具有显著影响。
                     </p>
-
                 </div>
             </div>
         </div>
-        <!-- /.container -->
     </div>
 
-    <div class="content-section-b">
-
-    <div class="container">
+   <div class="content-section-b">
+     <div class="container">
             <div class="row">
               <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
                   <h3 class="section-heading">刺激材料和仪器</h3>
@@ -315,29 +291,28 @@
                     <br/>
                    </br/>
                    被试双眼与屏幕距离约为60cm，视角小于3°。
-                 </p>
-               </div>
-                <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
+                  <img  src="img/流程.jpg" height="250" width="500" alt="Generic placeholder image">
+                </p>
+              </div>
+              <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
                     <h3 class="section-heading">程序和任务</h3>
                     <p class="lead">
-                      本实验采用情绪启动范式，研究先呈现注视点500ms，面部表情图片作为启动刺激，呈现时间为500ms。间隔时间为600ms到900ms之间（间隔时间内呈现注视点“+”），随后要求被试对面部表情与情绪词（靶刺激）进行匹配，与靶刺激共同呈现的是一个干扰刺激（一个与启动刺激不匹配的情绪词）。从而形成评价一致和不一致两种结果，控制SOA分别为600ms或1300ms（SOA 指从启动刺激开始呈现到靶刺激激开始呈现的时间间隔）。研究表明, 当启动刺激与靶刺激效价一致时所需反应时比效价不一致时更短，所以要求被试在尽可能快的时间里进行词语的匹配。
+                      本实验采用经典情绪启动范式，研究先呈现注视点500ms，面部表情图片作为启动刺激，呈现时间为500ms。间隔时间为100ms到800ms（间隔时间内呈现注视点“+”），随后要求被试对面部表情与情绪词（靶刺激）进行匹配，与靶刺激共同呈现的是一个干扰刺激（一个与启动刺激不匹配的情绪词）。从而形成评价一致和不一致两种结果，控制SOA分别为600ms到1300ms（SOA 指从启动刺激开始呈现到靶刺激激开始呈现的时间间隔）。研究表明, 当启动刺激与靶刺激效价一致时所需反应时比效价不一致时更短，所以要求被试在尽可能快的时间里进行词语的匹配。
                       <br/>
                      </br/>
                       依据JAFFE人脸表情数据库，本实验共有六种面孔图片与情绪词语的匹配方式：高兴、悲伤、惊奇、愤怒、厌恶、恐惧，练习阶段每种情绪呈现1次，共6个试次。正式实验阶段每种情绪呈现6次，一共36个试次。
                     </p>
               </div>
-
-         </div>
+            </div>
         </div>
     </div>
 
 
 
-	<!-- Credits -->
+	<!-- 结果与讨论 -->
 	<div id="结果与讨论" class="content-section-a">
 		<div class="container">
 			<div class="row">
-
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>结果与讨论</h2>
 				<p class="lead" style="margin-top:0">预期结果与讨论</p>
@@ -394,7 +369,7 @@
 		</div>
 	</div>
 
-	<!-- Banner Download -->
+	<!-- 实验介绍结束 -->
 	<div id="downloadlink" class="banner">
 		<div class="container">
 			<div class="row">
