--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<li><a href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_1Opxjxh6Z7OAfFr" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="0.8s" target="_blank" ><span class="network-name" >进入问卷</span></a>
 				</li>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<li id="download" ><a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&tn=site888_3_pg&wd=%E5%95%A6%E5%95%A6%E5%95%A6&oq=%25E5%2593%2588%25E5%2593%2588%25E5%2593%2588&rsv_pq=b91452fc0002c4f8&rsv_t=e736TWDxlN0%2F91aIkoJnEo9HE628e9sH9H0OoB2cjXR8qTcTCcrurwE1%2BvkKzuUzYfQg&rqlang=cn&rsv_enter=1&rsv_sug3=15&rsv_sug1=9&rsv_sug7=100&bs=%E5%93%88%E5%93%88%E5%93%88" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s" target="_blank" ><span class="network-name" >进入实验</span></a>
+				<li><a href="http://research.millisecond.com/weicong1203/zhengshishiyan.web" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s" target="_blank" ><span class="network-name" >进入实验</span></a>
         </li>
         <br />
         <li>
@@ -190,9 +190,9 @@
                      </div>
                     </a>
                     <a href="img/slide/表情2.jpg" class="image-link">
-                        <div class="item">
+                      <div class="item">
                           <img  class="img-responsive img-rounded" src="img/slide/表情2f.JPG" alt="">
-                        </div>
+                      </div>
                     </a>
                     <a href="img/slide/表情3.jpg" class="image-link">
                       <div class="item">
@@ -223,13 +223,13 @@
                     <h3 class="section-heading">什么是情绪启动效应？</h3>
                     <p class="lead"> 情绪启动(affective priming)是指对在评价上处于两极的目标刺激而言，个体对其做出评价的时间与准确性受到其前面的启动刺激性质的调节，当启动刺激和目标刺激的性质相一致时，个体对目标刺激的反应就会更快、更准确。而当启动刺激与目标刺激性质不一致时，个体对目标刺激的反应就较慢，错误率也较高。启动效应证实了人类拥有非条件性地、自动对传入刺激进行评价的能力。情绪启动效应(affective priming effect)指的是个体先行加工具有一定情绪意义的刺激后, 后继加工也易于蒙上相应的情绪色彩。
                     </p>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="content-section-b">
-      <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-2" class="owl-carousel">
@@ -313,10 +313,10 @@
 	<div id="结果与讨论" class="content-section-a">
 		<div class="container">
 			<div class="row">
-			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>结果与讨论</h2>
-				<p class="lead" style="margin-top:0">预期结果与讨论</p>
-			 </div>
+			  <div class="col-md-6 col-md-offset-3 text-center wrap_title">
+				 <h2>结果与讨论</h2>
+				 <p class="lead" style="margin-top:0">预期结果与讨论</p>
+			  </div>
 
 				<div class="col-sm-6  block wow bounceIn">
 					<div class="row">
@@ -430,11 +430,11 @@
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="js/owl.carousel.js"></script>
-	<script src="js/script.js"></script>
+	  <script src="js/owl.carousel.js"></script>
+	  <script src="js/script.js"></script>
 	<!-- StikyMenu -->
-	<script src="js/stickUp.min.js"></script>
-	<script type="text/javascript">
+	  <script src="js/stickUp.min.js"></script>
+	  <script type="text/javascript">
 	  jQuery(function($) {
 		$(document).ready( function() {
 		  $('.navbar-default').stickUp();
